More work on class manip